--- a/andrew-react/src/App.css
+++ b/andrew-react/src/App.css
@@ -1,22 +1,27 @@
-.App {
+
+.nav-bar {
+  margin-top: 20px;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
+div.nav-button {
+  text-align: center;
+  display: inline-block;
+  width: 25vw;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+button.nav-button {
+  margin-bottom: 6px;
 }
 
-.App-link {
-  color: #09d3ac;
+.app-bar {
+  height: 56px;
 }
+
+.app-bar h6 {
+  margin: auto 0 auto 20px;
+}
+
+/*div.nav-icon span:hover {*/
+/*  color: */
+/*}*/
