Added contact information

--- a/andrew-react/src/App.css
+++ b/andrew-react/src/App.css
@@ -146,3 +146,19 @@ p {
 .resume-item {
   padding-bottom: 25px;
 }
+
+.contact-info * {
+  display: inline;
+  vertical-align: middle;
+  padding-right: 8px;
+
+}
+
+.contact-info {
+  padding: 10px;
+}
+
+a {
+  text-decoration: none;
+  font-weight: bold;
+}
