Working on cleaning up styles. About and Resume complete.

--- a/andrew-react/src/App.css
+++ b/andrew-react/src/App.css
@@ -23,9 +23,9 @@
 /*  margin-bottom: 12px;*/
 /*}*/
 
-.about-card img {
-  width: 100%;
-}
+/*.about-card img {*/
+/*  width: 100%;*/
+/*}*/
 
 /*.about-card-text {*/
 /*  padding: 12px;*/
